--- a/src/app/modules/home/components/intro/intro.component.html
+++ b/src/app/modules/home/components/intro/intro.component.html
@@ -125,24 +125,25 @@
           <p class="margin-ls">Endeavor to achieve daily, monthly, yearly, and lifetime savings targets.</p>
           <div class="benefit-item full-width padding-t">
             <div class="benefit-item-heading margin-ls">
-              <fa name="line-chart" class="padding-rs padding-ts"></fa>
+              <fa name="diamond" class="padding-rs padding-ts"></fa>
               <p class="margin-s">Net Worth</p>
             </div>
             <p class="margin-ls">Keep a running record of the value of your assets.</p>
           </div>
           <div class="benefit-item full-width padding-t">
             <div class="benefit-item-heading margin-ls">
-              <fa name="bell" class="padding-rs padding-ts"></fa>
-              <p class="margin-s">Real Time Alerts</p>
+              <fa name="bullseye" class="padding-rs padding-ts"></fa>
+              <p class="margin-s">Targets</p>
             </div>
-            <p class="margin-ls">Get alerts on your mobile device when you exceed your budget.</p>
+            <p class="margin-ls">Align your savings with lifetime goals.</p>
           </div>
           <div class="benefit-item full-width padding-t">
             <div class="benefit-item-heading margin-ls">
-              <fa name="calendar" class="padding-rs padding-ts"></fa>
-              <p class="margin-s">Reminders</p>
+              <fa name="line-chart" class="padding-rs padding-ts"></fa>
+              <p class="margin-s">Predictions</p>
             </div>
-            <p class="margin-ls">Receive alerts for upcoming bills. Never get hit by a late fee again.</p>
+            <p class="margin-ls">Get inflation, depreciation and appreciation adjusted
+              values of your assets and liquid finances.</p>
           </div>
         </div>
       </div>
