--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
          fxLayoutGap="16px"
          fxLayoutGap.xs="0">
       <div class="bg-white" fxFlex *ngFor="let card of cards">
-        <app-card [config$]="card"></app-card>
+        <app-card [config]="card"></app-card>
       </div>
     </div>
     <div class="margin-ts"
