--- a/src/app/modules/shared/components/modal/modal.component.html
+++ b/src/app/modules/shared/components/modal/modal.component.html
@@ -1,4 +1,4 @@
-<div class="centered app-modal" [@slideAnimation]="modalState"
+<div class="centered app-modal"
 >
   <div class="app-modal-body"
        [ngClass]="{
