--- a/src/styles.scss
+++ b/src/styles.scss
@@ -319,7 +319,7 @@ li {
   height: 66px;
 }
 .content {
-  position: relative;
+  //position: relative;
   margin-top: 66px;
   height:95vh;
   //background: #f5f5f5;
