--- a/src/app/modules/shared/components/loader/loader.component.scss
+++ b/src/app/modules/shared/components/loader/loader.component.scss
@@ -15,10 +15,10 @@
   background-color: inherit;
   top: 0;
   bottom: 0;
-  background-color: #6EC4DB;
+  background-color: #ccd5db;
   transition: width .3s linear; }
 .progress .indeterminate {
-  background-color: #6EC4DB; }
+  background-color: #bcdbcf; }
 .progress .indeterminate:before {
   content: '';
   position: absolute;
@@ -27,8 +27,8 @@
   left: 0;
   bottom: 0;
   will-change: left, right;
-  -webkit-animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-  animation: indeterminate 2.1s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+  -webkit-animation: indeterminate 3s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+  animation: indeterminate 3s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
 .progress .indeterminate:after {
   content: '';
   position: absolute;
