Observable canvas  drawing

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -28,7 +28,7 @@
         <app-transactions></app-transactions>
       </div>
       <div fxFlex>
-        <app-linechart [chart]="lineChart" *ngIf="transactionsLoaded$ | async"></app-linechart>
+        <app-linechart [chart]="lineChart"></app-linechart>
       </div>
     </div>
     <div class="margin-ts"
