--- a/src/app/modules/dashboard/components/transactions/transactions.component.html
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.html
@@ -81,6 +81,16 @@
         <td class="padding-h">
           {{transaction.created_at | date: 'MMM d'}}
         </td>
+        <td class="padding">
+          <div class="transaction-action-icon">
+            <fa name="trash" class="centered"></fa>
+          </div>
+        </td>
+        <td>
+          <div class="transaction-action-icon hovicon effect-1 sub-a">
+            <fa name="ellipsis-h" class="centered centered-v"></fa>
+          </div>
+        </td>
       </tr>
       </tbody>
     </table>
