--- a/src/variables.scss
+++ b/src/variables.scss
@@ -2,10 +2,7 @@
 //                Variables                  //
 ///////////////////////////////////////////////
 
-$acp-colors: (
-  'primary': #0E5A77,
-  'secondary': #777529,
-  'accent': #5a1321,
-  'foreground': #191919,
-  'background': #f6f1f8
-);
+$primary: #6EC4DB;
+$secondary: #3197EE;
+$background: #E6ECF0;
+$bg-s: #f5f8fa;
