--- a/src/app/modules/dashboard/components/transactions/transactions.component.html
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.html
@@ -82,13 +82,13 @@
           {{transaction.created_at | date: 'MMM d'}}
         </td>
         <td class="padding">
-          <div class="transaction-action-icon">
+          <div class="transaction-action-icon" (click)="deleteTransaction(transaction.id)">
             <fa name="trash" class="centered"></fa>
           </div>
         </td>
         <td>
-          <div class="transaction-action-icon hovicon effect-1 sub-a">
-            <fa name="ellipsis-h" class="centered centered-v"></fa>
+          <div class="transaction-action-icon hovicon-mini effect-1 sub-a">
+            <fa name="ellipsis-h" class="centered"></fa>
           </div>
         </td>
       </tr>
