--- a/src/app/modules/dashboard/components/transactions/transactions.component.scss
+++ b/src/app/modules/dashboard/components/transactions/transactions.component.scss
@@ -56,11 +56,12 @@
         }
 
         .transaction-action-icon {
-          width: 50px;
-          height: 50px;
-          margin: 4px;
-          border: 1px solid $bg-s;
-          border-radius: 50px;
+          //  width: 50px;
+          //  height: 50px;
+          //  margin: 4px;
+          //  border: 1px solid $bg-s;
+          //  border-radius: 50px;
+          //}
         }
 
         .transaction-action-icon:hover {
