--- a/src/app/modules/dashboard/components/card/card.component.scss
+++ b/src/app/modules/dashboard/components/card/card.component.scss
@@ -5,14 +5,14 @@
 
   .title {
     p {
-      font-family: "DejaVu Sans Mono";
+      //font-family: "DejaVu Sans Mono";
       font-size: 20px;
     }
   }
 
   .card-value {
     p {
-      font-family: "DejaVu Sans Mono";
+      //font-family: "DejaVu Sans Mono";
       font-size: 30px;
     }
   }
@@ -20,7 +20,7 @@
   .card-trend {
     margin-top: 20px;
     fa, p {
-      font-family: "DejaVu Sans Mono";
+      //font-family: "DejaVu Sans Mono";
       font-size: 20px;
     }
   }
