--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -3,7 +3,39 @@
 </div>
 <div class="content" #content>
   <div class="margin-s container">
-    <div class="margin-s sticky-top high">
+    <div class="filters left"  fxLayout
+         fxLayout.xs="row"
+         fxLayoutAlign="space-between"
+         fxLayoutGap="8px"
+         fxLayoutGap.xs="0">
+      <div class="filter centered-v padding-h bordered" flex (mouseenter)="showTagOptions = true" (mouseleave)="showTagOptions = false">
+        <fa name="tag" class="centered-v padding-v padding-ls type"></fa>
+        <p class="padding-v centered hoverable">All Tags</p>
+        <fa name="angle-down" class="centered-v padding-v hoverable arrow"></fa>
+        <div class="raised options bg-s" *ngIf="showTagOptions">
+          <p *ngFor="let tag of tags" class="padding hoverable bordered margin rounded-s">{{ tag.name }}</p>
+        </div>
+      </div>
+      <div class="filter centered-v padding-h bordered" flex>
+        <fa name="calendar" class="centered-v padding-v padding-ls type"></fa>
+        <p class="padding-v centered">This Month</p>
+        <fa name="angle-down" class="centered-v padding-v arrow"></fa>
+      </div>
+    </div>
+    <div class="filters right margin-rs"  fxLayout
+         fxLayout.xs="row"
+         fxLayoutAlign="space-between"
+         fxLayoutGap="8px"
+         fxLayoutGap.xs="0">
+      <div class="filter centered-v padding-h bordered hoverable" flex>
+        <div class="padding-l">
+          <i class="flag flag-48 flag-ke centered-v"></i>
+        </div>
+        <p class="padding-v centered">Kshs</p>
+        <fa name="angle-down" class="centered-v padding-v arrow"></fa>
+      </div>
+    </div>
+    <div class="margin-ts margin-bs sticky-top high">
       <div class="transaction-bar">
         <app-transaction-form></app-transaction-form>
       </div>
