--- a/src/variables.scss
+++ b/src/variables.scss
@@ -6,3 +6,8 @@ $primary: #6EC4DB;
 $secondary: #3197EE;
 $background: #E6ECF0;
 $bg-s: #f5f8fa;
+$purple: #db2abe;
+$green: #66AB86;
+$red: #FA7C92;
+$blue: #6EC4DB;
+$grey: #f5f8fa;
