--- a/src/app/modules/shared/components/loader/loader.component.scss
+++ b/src/app/modules/shared/components/loader/loader.component.scss
@@ -1,3 +1,4 @@
+@import "~src/variables.scss";
 
 /* Progress Bar */
 .progress {
@@ -5,20 +6,20 @@
   height: 4px;
   display: block;
   width: 100%;
-  background-color: #f5f8fa;
+  background-color: $primary;
   border-radius: 2px;
   background-clip: padding-box;
   //margin: 0.5rem 0 1rem 0;
   overflow: hidden; }
 .progress .determinate {
   position: absolute;
-  background-color: inherit;
   top: 0;
   bottom: 0;
-  background-color: #ccd5db;
-  transition: width .3s linear; }
+  background-color: $grey;
+  transition: width .3s linear;
+}
 .progress .indeterminate {
-  background-color: #bcdbcf; }
+  background-color: $green; }
 .progress .indeterminate:before {
   content: '';
   position: absolute;
