--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -40,5 +40,5 @@
     </div>
   </div>
 </div>
-<app-loader *ngIf="loaderService.loaderState"></app-loader>
+<app-loader *ngIf="(isLoading$ | async)"></app-loader>
 
