Global easily callable loader

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -7,8 +7,8 @@
          fxLayout.xs="row"
          fxLayoutAlign="space-between"
          fxLayoutGap="8px"
-         fxLayoutGap.xs="0">
-      <div flex>
+         fxLayoutGap.xs="0" class="sticky-top high">
+      <div flex >
         <div class="filters"  fxLayout
              fxLayout.xs="row"
              fxLayoutAlign="space-between"
