--- a/src/app/modules/shared/components/loader/loader.component.scss
+++ b/src/app/modules/shared/components/loader/loader.component.scss
@@ -15,11 +15,11 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  background-color: $grey;
+  background-color: $primary;
   transition: width .3s linear;
 }
 .progress .indeterminate {
-  background-color: $green; }
+  background-color: $grey; }
 .progress .indeterminate:before {
   content: '';
   position: absolute;
@@ -28,8 +28,8 @@
   left: 0;
   bottom: 0;
   will-change: left, right;
-  -webkit-animation: indeterminate 3s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
-  animation: indeterminate 3s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
+  -webkit-animation: indeterminate 5s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite;
+  animation: indeterminate 5s cubic-bezier(0.65, 0.815, 0.735, 0.395) infinite; }
 .progress .indeterminate:after {
   content: '';
   position: absolute;
@@ -41,28 +41,37 @@
   -webkit-animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
   animation: indeterminate-short 2.1s cubic-bezier(0.165, 0.84, 0.44, 1) infinite;
   -webkit-animation-delay: 1.15s;
-  animation-delay: 1.15s; }
+  animation-delay: 1.15s;
+}
 
 @-webkit-keyframes indeterminate {
   0% {
     left: -35%;
     right: 100%; }
+  30% {
+    left: 100%;
+    right: -90%; }
   60% {
     left: 100%;
     right: -90%; }
   100% {
     left: 100%;
-    right: -90%; } }
+    right: -90%; }
+}
 @keyframes indeterminate {
   0% {
     left: -35%;
     right: 100%; }
+  30% {
+    left: 100%;
+    right: -90%; }
   60% {
     left: 100%;
     right: -90%; }
   100% {
     left: 100%;
-    right: -90%; } }
+    right: -90%; }
+}
 @-webkit-keyframes indeterminate-short {
   0% {
     left: -200%;
