All changes to march api

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
          fxLayout.xs="row"
          fxLayoutAlign="space-between"
          fxLayoutGap="8px"
-         fxLayoutGap.xs="0" class="sticky-top high">
+         fxLayoutGap.xs="0" class="sticky-top">
       <div flex >
         <div class="filters"  fxLayout
              fxLayout.xs="row"
