--- a/src/app/modules/shared/components/header/header.component.html
+++ b/src/app/modules/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="row no-padding padding-bs header-wrapper">
   <div class="col">
-    <div class="margin options">
+    <div class="margin options high">
       <a *ngIf="!(loggedIn$ | async)" class="centered padding option" routerLink="/account/register">
         Register
         <fa name="user" class="padding"></fa>
