Fix bugs in addition of transactions

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -7,7 +7,7 @@
          fxLayout.xs="row"
          fxLayoutAlign="space-between"
          fxLayoutGap="8px"
-         fxLayoutGap.xs="0" class="sticky-top">
+         fxLayoutGap.xs="0">
       <div flex >
         <div class="filters"  fxLayout
              fxLayout.xs="row"
@@ -32,9 +32,9 @@
           </div>
         </div>
       </div>
-      <div flex>
+      <div flex class="high">
         <div class="relative">
-          <div class="margin-bs sticky-top high">
+          <div class="margin-bs">
             <div class="transaction-bar">
               <app-transaction-form></app-transaction-form>
             </div>
