--- a/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
+++ b/src/app/modules/dashboard/components/transaction-form/transaction-form.component.html
@@ -1,4 +1,4 @@
-<form novalidate [formGroup]="transactionForm" autocomplete="off">
+<form novalidate [formGroup]="transactionForm" autocomplete="off" class="high">
   <div class="centered transaction-add"
        appClickOutside
        (clickOutside)="onClickOutside($event)"
@@ -55,7 +55,6 @@
           <div class="transaction-tag padding-s" fxFlex>
             <input type="text" placeholder="Tag" name="tag"
                    class="full-width"
-                   (keyup)="toUpperCase()"
                    formControlName="tag">
             <div class="tags-suggestions raised-light"
                  [@slideInOutSlow]="suggestionsAnimationState">
@@ -91,7 +90,7 @@
         </div>
       </div>
 
-      <div class="transaction-actions full-width bg-s">
+      <div class="full-width bg-s transaction-actions">
         <div class="centered-v action-item"
              *ngIf="transactionBoxAnimationState == 'in'">
           <div class="margin add-transaction-button" (click)="saveTransaction()">
