--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="pie-chart">
-    <div class="margin-rs padding">d
+    <div class="margin-rs padding">
       <canvas class="centered" #canvas1></canvas>
     </div>
     <div class="keys padding-s">
