--- a/src/app/modules/charts/components/piechart/piechart.component.scss
+++ b/src/app/modules/charts/components/piechart/piechart.component.scss
@@ -5,12 +5,16 @@
     .key {
       display: inline-flex;
 
-      .color {
-        height: 10px;
-        width: 10px;
-        border-radius: 10px;
-        //border: 2px dotted blueviolet;
+      .key-tag {
+        width: 140px;
+        .color {
+          height: 10px;
+          width: fit-content;
+          align-items: center;
+          //border: 2px dotted blueviolet;
+        }
       }
+
 
       .color-title {
         width: 40%;
