Colors go hand in hand

--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -12,7 +12,7 @@
     <div class="keys padding-s">
       <div *ngFor="let pie of chart.pies" class="full-width key padding">
         <div class="key-tag">
-          <div class="padding color"
+          <div class="padding centered color"
                [ngStyle]="{
         'background-color': pie.color,
         'color': invertColor(pie.color, true)
