--- a/src/app/modules/charts/components/piechart/piechart.component.html
+++ b/src/app/modules/charts/components/piechart/piechart.component.html
@@ -1,5 +1,5 @@
 <script src="../../../auth/auth-routing.module.ts"></script>
-<div class="padding-s margin-s" [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 500}">
+<div class="padding-s margin-s" [ngStyle]="{'background-color': chart.backgroundColor,'width.px': chart.width + 200}">
   <div class="padding-s margin-bs">
     <p class="centered bold padding">{{chart.title}}</p>
     <p class="centered info color-grey">{{chart.subtitle }}</p>
@@ -11,7 +11,7 @@
     </div>
     <div class="keys padding-s">
       <div *ngFor="let pie of chart.pies" class="full-width key padding">
-        <div class="key-tag">
+        <div class="key-tag margin-r">
           <div class="padding centered color"
                [ngStyle]="{
         'background-color': pie.color,
