--- a/src/app/modules/dashboard/dashboard/dashboard.component.scss
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.scss
@@ -22,6 +22,11 @@
       color: $primary;
     }
 
+    .menu-icon {
+      height: 32px;
+      width: 50px;
+    }
+
     .filter {
       border-top: 2px solid $primary;
       display: inline-flex;
