Budgets and alerts on dashboard

--- a/src/app/modules/dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard/dashboard.component.html
@@ -3,7 +3,6 @@
 </div>
 <div class="content" #content>
   <div class="margin-s container">
-
     <div fxLayout
          fxLayout.xs="row"
          fxLayoutAlign="space-between"
@@ -73,7 +72,7 @@
          fxLayoutGap.xs="0">
 
       <div fxFlex="1 1 20%" *ngIf="showSide">
-        <div class="bg-white full-height margin-r">
+        <div class="bg-white raised full-height margin-r">
           <app-budgets></app-budgets>
         </div>
       </div>
