--- a/src/app/modules/dashboard/components/budgets/budgets.component.html
+++ b/src/app/modules/dashboard/components/budgets/budgets.component.html
@@ -2,4 +2,47 @@
   <div>
     Budgets and Alerts
   </div>
+  <div
+      [ngStyle]="{'border-color': limit.tag.color}"
+      *ngFor="let limit of limits$ | async"
+       class="bordered padding margin-bs limit-container">
+    <div class="limit-detail">
+      <p class="bold-700 margin-b" [ngStyle]="{'color': limit.tag.color}">{{ limit.tag.name }}</p>
+      <div class="margin-b">
+        <span>{{ limit.start_date | date }}</span>
+        <span class="float-right">{{ limit.end_date | date}}</span>
+      </div>
+      <div>
+        <span>Kshs. {{ getDataObject(limit).value }}</span>
+        <span class="float-right">Ksh. {{ limit.amount }}</span>
+      </div>
+    </div>
+    <div class="bg-s bordered limit-progress">
+      <div
+        *ngIf="getPercentage(limit, getDataObject(limit)) < 70"
+        [ngStyle]="{
+        'background': '#66AB86',
+        'width.%': getPercentage(limit, getDataObject(limit))
+      }"
+        class="limit">
+      </div>
+      <div
+        *ngIf="getPercentage(limit, getDataObject(limit)) < 90 && getPercentage(limit, getDataObject(limit)) >= 70"
+        [ngStyle]="{
+        'background': '#6EC4DB',
+        'width.%': getPercentage(limit, getDataObject(limit))
+      }"
+        class="limit">
+      </div>
+      <div
+        *ngIf="getPercentage(limit, getDataObject(limit)) <= 100 && getPercentage(limit, getDataObject(limit)) >= 90"
+        [ngStyle]="{
+        'background': '#FA7C92',
+        'width.%': getPercentage(limit, getDataObject(limit))
+      }"
+        class="limit">
+      </div>
+    </div>
+
+  </div>
 </div>
