--- a/src/app/modules/dashboard/components/budgets/budgets.component.html
+++ b/src/app/modules/dashboard/components/budgets/budgets.component.html
@@ -1,6 +1,7 @@
 <div class="padding-s">
-  <div>
-    Budgets and Alerts
+  <div class="margin-bs">
+    <span>BUDGETS AND ALERTS</span>
+    <a class="float-right add-limit-tag" routerLink="budgets/">Add</a>
   </div>
   <div
       [ngStyle]="{'border-color': limit.tag.color}"
