--- a/src/app/modules/dashboard/components/budgets/budgets.component.scss
+++ b/src/app/modules/dashboard/components/budgets/budgets.component.scss
@@ -1,3 +1,11 @@
+.add-limit-tag {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.add-limit-tag:hover {
+  color: #afdbd5;
+}
 .limit-container {
   height: 100px;
   border-top-width: 6px;
